// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:button 1`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Panel--form"
    style="position: relative;"
  >
    <div
      class="a-Panel-heading"
    >
      <h3
        class="a-Panel-title"
      >
        <span
          class="a-TplField"
        >
          The form
        </span>
      </h3>
    </div>
    <div
      class="a-Panel-body"
    >
      <form
        class="a-Form a-Form--normal"
        novalidate=""
      >
        <div
          class="a-Form-item a-Form-item--normal"
        >
          <button
            class="a-Button a-Button--default a-Form-control"
            type="button"
          >
            <span>
              Text
            </span>
            <i
              class="a-Button-icon fa fa-plus"
            />
          </button>
        </div>
        <div
          class="a-Form-item a-Form-item--normal"
        >
          <button
            class="a-Button a-Button--default a-Form-control"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="a-Form-item a-Form-item--normal"
        >
          <button
            class="a-Button a-Button--primary a-Form-control"
            type="submit"
          >
            <span>
              Submit
            </span>
          </button>
        </div>
        <div
          class="a-Form-item a-Form-item--normal r-2x"
        >
          <button
            class="a-Button a-Button--danger a-Button--sm a-Form-control"
            type="reset"
          >
            <span>
              Reset
            </span>
          </button>
        </div>
      </form>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
      </div>
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:button 2`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Panel--form"
    style="position: relative;"
  >
    <div
      class="a-Panel-heading"
    >
      <h3
        class="a-Panel-title"
      >
        <span
          class="a-TplField"
        >
          The form
        </span>
      </h3>
    </div>
    <div
      class="a-Panel-body"
    >
      <form
        class="a-Form a-Form--normal"
        novalidate=""
      >
        <div
          class="a-Form-item a-Form-item--normal"
        >
          <button
            class="a-Button a-Button--default a-Form-control"
            type="button"
          >
            <span>
              Text
            </span>
            <i
              class="a-Button-icon fa fa-plus"
            />
          </button>
        </div>
        <div
          class="a-Form-item a-Form-item--normal"
        >
          <button
            class="a-Button a-Button--default a-Form-control"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="a-Form-item a-Form-item--normal"
        >
          <button
            class="a-Button a-Button--primary a-Form-control"
            type="submit"
          >
            <span>
              Submit
            </span>
          </button>
        </div>
        <div
          class="a-Form-item a-Form-item--normal r-2x"
        >
          <button
            class="a-Button a-Button--danger a-Button--sm a-Form-control"
            type="reset"
          >
            <span>
              Reset
            </span>
          </button>
        </div>
      </form>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
      </div>
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget a-Modal a-Modal--1th"
    role="dialog"
  >
    <div
      class="a-Modal-overlay in"
    />
    <div
      class="a-Modal-content in"
    >
      <div
        class="a-Modal-header"
      >
        <a
          class="a-Modal-close"
          data-tooltip="关闭弹窗"
        >
          <svg
            class="icon"
            p-id="1463"
            version="1.1"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M967.81435 106.836237 917.16274 56.18565 512 461.34839 106.836237 56.18565 56.184627 106.836237 461.34839 512 56.184627 917.163763 106.836237 967.815373 512 562.65161 917.16274 967.815373 967.81435 917.163763 562.650587 512Z"
              data-spm-anchor-id="a313x.7781069.0.i0"
              p-id="1464"
            />
          </svg>
        </a>
        <div
          class="a-Modal-title"
        >
          提示
        </div>
      </div>
      <div
        class="a-Modal-body"
      >
        <span
          class="a-TplField"
        >
          对，你刚点击了！
        </span>
      </div>
      <div
        class="a-Modal-footer"
      >
        <button
          class="a-Button a-Button--default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="a-Button a-Button--primary"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
